# Knotted-Rope

./: .gitignore  CMakeLists.txt  README.md
KnottedRope/: CMakeLists.txt  about.cpp  about.h  about.ui  config.cpp  config.h  def.h  export_to_csv.cpp  export_to_csv.h  knotted_rope.qrc  knotted_rope_ds.cpp  knotted_rope_ds.h  knotted_rope_edit_dialog.cpp  knotted_rope_edit_dialog.h  knotted_rope_edit_dialog.ui  language.cpp  language.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ok_cancel_dialog.cpp  ok_cancel_dialog.h  ok_cancel_dialog.ui  rope_content_dialog.cpp  rope_content_dialog.h  rope_content_dialog.ui  ropes_view_content_edit_delegate.cpp  ropes_view_content_edit_delegate.h  ropes_view_dialog.cpp  ropes_view_dialog.h  ropes_view_dialog.ui  ropes_view_table_model.cpp  ropes_view_table_model.h  setting.cpp  setting.h  setting.ui  system_tray.cpp  system_tray.h  utility.cpp  (+1 more)
KnottedRope/language/: en.json  zh.json
doc/: ChangeLog.md  TODO.md
